@@ -1,5 +1,7 @@
 *SVN*
 
+* Add 'unloadable', a method used to mark any constant as requiring an unload after each request. [Nicholas Seckar]
+
 * Make core_ext/string/access.rb multibyte safe. Closes #6388 [Manfred Stienstra]
 
 * Make String#chars slicing behaviour consistent with String. Closes #6387 [Manfred Stienstra]
